ghc-4335c07/testsuite/tests/typecheck/should_fail/T12589.stderr

T12589.hs:13:3: error: Variable not in scope: (&) :: t1 -> t0 -> t

T12589.hs:13:5: error:
    • Cannot instantiate unification variable ‘t0’
      with a type involving foralls:
        (forall a. Bounded a => f0 a) -> h0 f0 xs0
        GHC doesn't yet support impredicative polymorphism
    • In the second argument of ‘(&)’, namely ‘hcpure (Proxy @Bounded)’
      In the expression: (&) minBound hcpure (Proxy @Bounded)
      In an equation for ‘a’: a = (&) minBound hcpure (Proxy @Bounded)
